infrastructure/apps/flux-system/konflate/app/networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-scraping-konflate
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: konflate
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 8081
